--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 						<h1>IWTO 2021</h1>
 						<h3>The 1st International Workshop on Test Oracles</h3>
                         <h3>Mon 23 - Fri 27 August 2021 Athens, Greece</h3>
-                        <h3>collocate with ESEC/FSE 2021</h3>
+                        <h3>collocated with ESEC/FSE 2021</h3>
 						<hr class="intro-divider">
 						<ul class="list-inline intro-social-buttons">
 							
